@@ -1,6 +1,7 @@
 Revision history for BioUtils
 
 1.0.11	Under development
+	- moved MyX::Generic to it's own Perl library
 	- added object for reformatting Genbank to GFF3 files
 	- added file option to input a fasta on reverse_complement.pl
 	- fastq option for filter_contaminants.pl
